# StaticPortfolio

./: .replit  CNAME  index.html  portfolio.html  project.html  pyproject.toml  records.html  replit.nix
Source/: main.css  projects.json  records.json
Source/Downloads/: Saturated.theme.css
Source/Downloads/DRPC/: main.py
Source/Scripts/: footer.js  generateIndex.js  generatePages.js  hover.js  htext.js  scrollBackground.js
Source/css/: main.css  tags.css
